--- a/index.html
+++ b/index.html
@@ -11,8 +11,25 @@
       <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" />
       <!-- bootstrap icon cdn  -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.min.css" />
+      <link rel="stylesheet" href="style.css" />
    </head>
    <body>
+      <header class="header">
+         <div class="container">
+            <div class="row">
+               <div class="col-12 d-flex justify-content-between align-items-center">
+                  <div class="d-none d-lg-block">
+                     <i class="bi bi-telephone-fill"></i> <span class="number">+88 09638-016499 (10:00 am - 06.00 pm)</span>
+                     <i class="bi bi-envelope-fill"></i><span class="mail">info@bitm.org.bd</span>
+                  </div>
+                  <div class="register ">
+                     <a href="#"><i class="bi bi-person-fill"></i>Login</a>
+                     <a href="#"><i class="bi bi-person-plus-fill"></i>Register</a>
+                  </div>
+               </div>
+            </div>
+         </div>
+      </header>
       <!-- javaScript cdn  -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
    </body>
