style sume point

--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
                      <i class="bi bi-envelope-fill"></i><span class="mail">info@bitm.org.bd</span>
                   </div>
                   <div class="register">
-                     <a href="#"><i class="bi bi-person-fill"></i>Login</a>
-                     <a href="#"><i class="bi bi-person-plus-fill"></i>Register</a>
+                     <a href="./pages/login"><i class="bi bi-person-fill"></i>Login</a>
+                     <a href="./pages/register"><i class="bi bi-person-plus-fill"></i>Register</a>
                   </div>
                </div>
             </div>
@@ -41,11 +41,11 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                <div class="navbar-nav m-auto">
-                  <a class="nav-link" href="#">Home</a>
-                  <a class="nav-link" href="#">Our Courses</a>
-                  <a class="nav-link" href="#">PGD</a>
-                  <a class="nav-link" href="#">RPL</a>
-                  <a class="nav-link" href="#">About Us</a>
+                  <a class="nav-link" href="index.html">Home</a>
+                  <a class="nav-link" href="./pages/our_courses">Our Courses</a>
+                  <a class="nav-link" href="./pages/pgd">PGD</a>
+                  <a class="nav-link" href="./pages/rpl">RPL</a>
+                  <a class="nav-link" href="./about_us">About Us</a>
                </div>
             </div>
             <a class="navbar-brand d-none d-lg-block" href="#"><img src="./img/basis logo.png" class="img-fluid" /></a>
@@ -58,11 +58,11 @@
          </div>
          <div class="offcanvas-body text-center">
             <div class="navbar-nav">
-               <a class="nav-link" href="#">Home</a>
-               <a class="nav-link" href="#">Our Courses</a>
-               <a class="nav-link" href="#">PGD</a>
-               <a class="nav-link" href="#">RPL</a>
-               <a class="nav-link" href="#">About Us</a>
+               <a class="nav-link" href="index.html">Home</a>
+               <a class="nav-link" href="./pages/our_courses">Our Courses</a>
+               <a class="nav-link" href="./pages/pgd">PGD</a>
+               <a class="nav-link" href="./pages/rpl">RPL</a>
+               <a class="nav-link" href="./about_us">About Us</a>
             </div>
          </div>
       </div>
