--- a/index.html
+++ b/index.html
@@ -41,11 +41,72 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                <div class="navbar-nav m-auto">
-                  <a class="nav-link" href="index.html">Home</a>
-                  <a class="nav-link" href="./pages/our_courses">Our Courses</a>
-                  <a class="nav-link" href="./pages/pgd">PGD</a>
-                  <a class="nav-link" href="./pages/rpl">RPL</a>
-                  <a class="nav-link" href="./about_us">About Us</a>
+                  <a class="nav-link" href="./index.html">Home</a>
+                  <!-- <a class="nav-link" href="./pages/our_courses">Our Courses</a> -->
+                  <li class="nav-item dropdown">
+                     <a
+                        class="nav-link dropdown-toggle"
+                        href="#"
+                        role="button"
+                        data-bs-toggle="dropdown"
+                        aria-expanded="false"
+                     >
+                        Our Courses
+                     </a>
+                     <!-- navbar dropdown item  -->
+                     <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="./pages/all_courses.html">All Courses </a></li>
+                        <li>
+                           <a class="dropdown-item" href="./pages/graphics_and_multimedia.html"
+                              >Graphics & Multimedia</a
+                           >
+                        </li>
+                        <li>
+                           <a class="dropdown-item" href="./pages/web_&_software_development.html"
+                              >Web & Software Development</a
+                           >
+                        </li>
+                        <li><a class="dropdown-item" href="./pages/digital_marketing.html">Digital Marketing</a></li>
+                        <li>
+                           <a class="dropdown-item" href="./pages/3d_animation_&_visualization.html"
+                              >3D Animation & Visualization</a
+                           >
+                        </li>
+                        <li>
+                           <a class="dropdown-item" href="./pages/data_science_&_analytics.html"
+                              >Data Science & Analytics</a
+                           >
+                        </li>
+                        <li>
+                           <a class="dropdown-item" href="./pages/network_&_server_administration.html"
+                              >Network & Server Administration</a
+                           >
+                        </li>
+                        <li>
+                           <a class="dropdown-item" href="./pages/cyber_security_and_cloud_computing.html"
+                              >Cyber Security and Cloud Computing</a
+                           >
+                        </li>
+                        <li>
+                           <a class="dropdown-item" href="./pages/internet_of_things.html">Internet of Things (IOT)</a>
+                        </li>
+                        <li>
+                           <a class="dropdown-item" href="./pages/robotics_&_automation.html">Robotics & Automation</a>
+                        </li>
+                        <li>
+                           <a class="dropdown-item" href="./pages/personals_development.html">Personal Development</a>
+                        </li>
+                        <li>
+                           <a class="dropdown-item" href="./pages/business_&_management.html">Business & Management</a>
+                        </li>
+                        <li>
+                           <a class="dropdown-item" href="./pages/computer_&_it_support.html">Computer & IT Support</a>
+                        </li>
+                     </ul>
+                  </li>
+                  <a class="nav-link" href="./pages/pgd.html">PGD</a>
+                  <a class="nav-link" href="./pages/rpl.html">RPL</a>
+                  <a class="nav-link" href="./pages/about_us.html">About Us</a>
                </div>
             </div>
             <a class="navbar-brand d-none d-lg-block" href="#"><img src="./img/basis logo.png" class="img-fluid" /></a>
@@ -59,10 +120,68 @@
          <div class="offcanvas-body text-center">
             <div class="navbar-nav">
                <a class="nav-link" href="index.html">Home</a>
-               <a class="nav-link" href="./pages/our_courses">Our Courses</a>
-               <a class="nav-link" href="./pages/pgd">PGD</a>
-               <a class="nav-link" href="./pages/rpl">RPL</a>
-               <a class="nav-link" href="./about_us">About Us</a>
+               <!-- <a class="nav-link" href="./pages/our_courses">Our Courses</a> -->
+               <li class="nav-item dropdown">
+                  <a
+                     class="nav-link dropdown-toggle"
+                     href="#"
+                     role="button"
+                     data-bs-toggle="dropdown"
+                     aria-expanded="false"
+                  >
+                     Our Courses
+                  </a>
+                  <ul class="dropdown-menu w-100 text-center">
+                     <li><a class="dropdown-item" href="./pages/all_courses.html">All Courses </a></li>
+                     <li>
+                        <a class="dropdown-item" href="./pages/graphics_and_multimedia.html">Graphics & Multimedia</a>
+                     </li>
+                     <li>
+                        <a class="dropdown-item" href="./pages/web_&_software_development.html"
+                           >Web & Software Development</a
+                        >
+                     </li>
+                     <li><a class="dropdown-item" href="./pages/digital_marketing.html">Digital Marketing</a></li>
+                     <li>
+                        <a class="dropdown-item" href="./pages/3d_animation_&_visualization.html"
+                           >3D Animation & Visualization</a
+                        >
+                     </li>
+                     <li>
+                        <a class="dropdown-item" href="./pages/data_science_&_analytics.html"
+                           >Data Science & Analytics</a
+                        >
+                     </li>
+                     <li>
+                        <a class="dropdown-item" href="./pages/network_&_server_administration.html"
+                           >Network & Server Administration</a
+                        >
+                     </li>
+                     <li>
+                        <a class="dropdown-item" href="./pages/cyber_security_and_cloud_computing.html"
+                           >Cyber Security and Cloud Computing</a
+                        >
+                     </li>
+                     <li>
+                        <a class="dropdown-item" href="./pages/internet_of_things.html">Internet of Things (IOT)</a>
+                     </li>
+                     <li>
+                        <a class="dropdown-item" href="./pages/robotics_&_automation.html">Robotics & Automation</a>
+                     </li>
+                     <li>
+                        <a class="dropdown-item" href="./pages/personals_development.html">Personal Development</a>
+                     </li>
+                     <li>
+                        <a class="dropdown-item" href="./pages/business_&_management.html">Business & Management</a>
+                     </li>
+                     <li>
+                        <a class="dropdown-item" href="./pages/computer_&_it_support.html">Computer & IT Support</a>
+                     </li>
+                  </ul>
+               </li>
+               <a class="nav-link" href="./pages/pgd.html">PGD</a>
+               <a class="nav-link" href="./pages/rpl.html">RPL</a>
+               <a class="nav-link" href="./pages/about_us.html">About Us</a>
             </div>
          </div>
       </div>
@@ -742,7 +861,6 @@
             <img src="./img/SSLCommerz-Pay-With-logo-All-Size-03.png" class="collaboration img-fluid" />
          </div>
       </footer>
-
       <!-- javaScript cdn  -->
       <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"></script>
    </body>
