--- a/pages/internet_of_things.html
+++ b/pages/internet_of_things.html
@@ -83,7 +83,7 @@
                               >Cyber Security and Cloud Computing</a
                            >
                         </li>
-                        <li><a class="dropdown-item" href="./internet_of_things">Internet of Things (IOT)</a></li>
+                        <li><a class="dropdown-item" href="./internet_of_things.html">Internet of Things (IOT)</a></li>
                         <li><a class="dropdown-item" href="./robotics_&_automation.html">Robotics & Automation</a></li>
                         <li><a class="dropdown-item" href="./personals_development.html">Personal Development</a></li>
                         <li><a class="dropdown-item" href="./business_&_management.html">Business & Management</a></li>
@@ -142,7 +142,7 @@
                            >Cyber Security and Cloud Computing</a
                         >
                      </li>
-                     <li><a class="dropdown-item" href="./internet_of_things">Internet of Things (IOT)</a></li>
+                     <li><a class="dropdown-item" href="./internet_of_thingshtml">Internet of Things (IOT)</a></li>
                      <li><a class="dropdown-item" href="./robotics_&_automation.html">Robotics & Automation</a></li>
                      <li><a class="dropdown-item" href="./personals_development.html">Personal Development</a></li>
                      <li><a class="dropdown-item" href="./business_&_management.html">Business & Management</a></li>
